--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -7,8 +7,10 @@
 <link rel="stylesheet" href="../styles/style.css">
 <link rel="stylesheet" href="../styles/aboutme.css">
 <link rel="stylesheet" href="../styles/annimations.css">
+<link rel="stylesheet" href="../styles/projects.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 <script src="https://use.fontawesome.com/9c02f0a892.js"></script>
+<script src="https://kit.fontawesome.com/e9c1d6f30e.js" crossorigin="anonymous"></script>
 </head>
 <body>
    
@@ -52,7 +54,8 @@
            <span class="fa fa-instagram"></span> 
             <span class="fa fa-linkedin-square"></span> 
            <span class="fa fa-quora"></span> 
-           <span class="fa fa-facebook-square"></span> 
+           <i class="fab fa-cuttlefish"></i>
+           <i class="fab fa-hackerrank"></i> 
           
         </div>
   
@@ -98,8 +101,8 @@
     <br>
     <br>
     <hr>
-    
-    <h3>Technical skills</h3>
+    <div class="tech-skills-container">
+    <h3 class="tech-skills">Technical skills</h3>
 
     <div class="skill-container">
        
@@ -110,7 +113,7 @@
             </div>
 
             <div class="css-image">
-                <img src="../Images/css.webp">
+                <img src="../Images/css.png">
             </div>
 
 
@@ -131,7 +134,7 @@
             </div>
 
             <div class="css-image">
-                <img src="../Images/python.webp">
+                <img src="../Images/python.png" >
             </div>
 
 
@@ -152,7 +155,7 @@
             </div>
 
             <div class="css-image">
-                <img src="../Images/bootstrap.png" style="height: 200px; width:200px;">
+                <img src="../Images/bootstrap.png" >
             </div>
 
 
@@ -182,6 +185,9 @@
                 element, be careful about the order in which you
                  specify your transformations. For example, if you rotate before translating, the
                  translation will be along the new axis of rotation!
+                </div>
+
+
             </div>
 
 
@@ -189,6 +195,243 @@
 
 
     </div>
+    <!-- work experience and achivement-->
 
+    <div class="work-container">
+    <h3 class="work-skills">Work Experience and Achievements</h3>
+
+    <div class="skill-container">
+       
+        <div class="css-html">
+            
+            <div class="css-heading">
+                Campus Ambassador at Coding Ninja
+            </div>
+
+            <div class="css-image">
+                <img src="../Images/cn.svg">
+            </div>
+
+
+            <div class="css-content">
+                If you want apply multiple transformations to an 
+                element, be careful about the order in which you
+                 specify your transformations. For example, if you rotate before translating, the
+                 translation will be along the new axis of rotation!
+            </div>
+
+
+        </div>
+
+        <div class="css-html">
+            
+            <div class="css-heading">
+                Winner of Ninjathon 2020
+            </div>
+
+            <div class="css-image">
+                <img src="../Images/covid.png">
+            </div>
+
+
+            <div class="css-content">
+                If you want apply multiple transformations to an 
+                element, be careful about the order in which you
+                 specify your transformations. For example, if you rotate before translating, the
+                 translation will be along the new axis of rotation!
+            </div>
+
+
+        </div>
+
+        <div class="css-html">
+            
+            <div class="css-heading">
+                Top Perfomer of Sacred Codes
+            </div>
+
+            <div class="css-image">
+                <img src="../Images/cp.png">
+            </div>
+
+
+            <div class="css-content">
+                If you want apply multiple transformations to an 
+                element, be careful about the order in which you
+                 specify your transformations. For example, if you rotate before translating, the
+                 translation will be along the new axis of rotation!
+            </div>
+
+
+        </div>
+
+        <div class="css-html">
+            
+            <div class="css-heading">
+               5 star in python and problem solving
+            </div>
+
+            <div class="css-image">
+                <img src="../Images/hackerrank.png">
+            </div>
+
+
+            <div class="css-content">
+                If you want apply multiple transformations to an 
+                element, be careful about the order in which you
+                 specify your transformations. For example, if you rotate before translating, the
+                 translation will be along the new axis of rotation!
+            </div>
+
+
+        </div>
+
+
+     </div>
+
+    </div>
+
+
+    <!-- project section starts here -->
+
+
+    <div class="project-section">
+
+    <div id="heading_card">MY PROJECTS</div>
+      <div class="projects" id="projects">
+
+        
+        <div class="flip-card">
+            
+         <div class="flip-card-inner">
+
+
+                        <div class="flip-card-front">
+                            <div class="upper-section">
+                                <img id="ayush" src="../Images/covid.png"  alt="product1">
+                        </div>
+                        
+                        <div class="bottom-section">
+                                <p class="heading"> Interactive Website on Covid-19</p><br>
+                                <p class="sub-heading"> Hover here to see the project and source code! </p> 
+                        </div>
+                        
+                        </div>
+
+
+                                <div class="flip-card-back">
+                                    
+                                    <img id="ayush" src="../Images/github.png"  alt="product1">
+                                    <hr>
+                                    <p class="git-link"><a href="https://github.com/An0nym0us-MrAbhi/An0nym0us-MrAbhi.github.io" target="_blank">Click here for source code</a></p>
+                                    <p class="project-link"><a href="https://an0nym0us-mrabhi.github.io/index.html"
+                                        target="_blank">Click here for live project</a></p>
+
+                                </div>
+         </div>
+        </div>
+        
+
+        <div class="flip-card">
+            
+            <div class="flip-card-inner">
+   
+   
+                           <div class="flip-card-front">
+                               <div style="background:rgb(0, 0, 0);"class="upper-section">
+                                   <img id="ayush" src="../Images/bunk.png" style=" width:250px;"  alt="product1">
+                           </div>
+                           
+                           <div class="bottom-section">
+                                   <p class="heading"> Social media helping students bunk!</p><br>
+                                   <p class="sub-heading"> Hover here to see the project and source code! </p> 
+                           </div>
+                           
+                           </div>
+   
+   
+                                   <div class="flip-card-back">
+                                       
+                                       <img id="ayush" src="../Images/github.png"  alt="product1">
+                                       <hr>
+                                       <p class="git-link"><a href="https://github.com/ayush-lab/bunker" target="_blank">Click here for source code</a></p>
+                                       <p class="project-link"><a href="https://ayushbunkker.pythonanywhere.com/"
+                                           target="_blank">Click here for live project</a></p>
+   
+                                   </div>
+            </div>
+           </div>
+        
+        <!-- end of second card -->
+        <div class="flip-card">
+            
+            <div class="flip-card-inner">
+   
+   
+                           <div class="flip-card-front">
+                               <div class="upper-section">
+                                   <img id="ayush" class="hope" src="../Images/hope.png"  alt="product1">
+                           </div>
+                           
+                           <div class="bottom-section">
+                                   <p class="heading"> Social Media to connect Plasma donors with covid patient</p><br>
+                                   <p class="sub-heading"> Hover here to see the project and source code! </p> 
+                           </div>
+                           
+                           </div>
+   
+   
+                                   <div class="flip-card-back">
+                                       
+                                       <img id="ayush" src="../Images/github.png"  alt="product1">
+                                       <hr>
+                                       <p class="git-link"><a href="https://github.com/ayush-lab/hopedonor" target="_blank">Click here for source code</a></p>
+                                      
+   
+                                   </div>
+            </div>
+           </div>
+
+
+
+
+        <div class="flip-card">
+            
+            <div class="flip-card-inner">
+   
+   
+                           <div class="flip-card-front">
+                               <div class="upper-section">
+                                   <img id="ayush" src="../Images/utube.png" style=" width:250px;"  alt="product1">
+                           </div>
+                           
+                           <div class="bottom-section">
+                                   <p class="heading"> MeTube allows watching youtube videos without disturbance</p><br>
+                                   <p class="sub-heading"> Hover here to see the project and source code! </p> 
+                           </div>
+                           
+                           </div>
+   
+   
+                                   <div class="flip-card-back">
+                                       
+                                       <img id="ayush" src="../Images/github.png"  alt="product1">
+                                       <hr>
+                                       <p class="git-link"><a href="https://github.com/hrik2001/MeTube" target="_blank">Click here for source code</a></p>
+                                       
+   
+                                   </div>
+            </div>
+           </div>
+        
+        <!-- end of fourth card -->
+
+
+
+        </div>
+
+    </div>
+
+    
 </body>
 </html>
