--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -31,23 +31,97 @@
     3px 3px 6px rgba(0, 0, 0, 0.541);
     
 }
+.tech-skills-container{
+    background:linear-gradient(#9796f0,#fbc7d4);
+}
 
-.skill-container{
-    display:flex;
-
-    margin-left:20px;
-   
-    padding-right:10px;
+.tech-skills{
+    text-align:center;
+    text-transform: uppercase;
+    font-size:40px;
+    font-weight:bold;
+    height:60px;
+    padding-top:20px;
+    color:white;
+    
     
 }
 
-.skill-container >.css-html{
-    border:solid 1px;
-    margin-bottom:20px;
-    padding:30px;
-    margin-right:20px;
+
+
+.skill-container{
+    
+    display:flex;
+    justify-content: space-evenly;
+    margin-left:0px;
+    
+    padding-right:10px;
+    
+
+    z-index:-100;
 }
 
+.skill-container >.css-html{
+    margin-top:30px;
+    /* background:linear-gradient(#e77987 , #f8c5cb); */
+    background:linear-gradient(#8583eb,#f5a4b8);
+    margin-bottom:60px;
+    padding:30px;
+    margin-right:20px;
+    text-align:center;
+    border-radius:10px;
+    box-shadow: -2px -2px 5px rgba(245, 244, 244, 0.274),
+        1px 1px 3px rgba(0, 0, 0, 0.541);
+    
+
+}
+.css-heading{
+
+    padding-top:15px;
+    margin-bottom:20px;
+    padding-bottom:20px;
+    text-transform: uppercase;
+   
+    border-radius:10px;
+    font-weight:bolder;
+    position:relative;
+
+}
+.css-heading:after{
+    content: "";
+    display:inline-block;
+    height:3px;
+    width:70%;
+    position: absolute;
+    top: 40px;
+    left:40px;
+    background:black;
+}
+
+
 .css-content{
-    width:300px;
+    width:250px;
+    text-align:center;
+}
+
+.css-image >img{
+    width:200px;
+    height:200px;
+     
+    
+}
+
+.work-skills{
+    text-align:center;
+    text-transform: uppercase;
+    font-size:40px;
+    font-weight:bold;
+    height:60px;
+    padding-top:20px;
+    
+    
+}
+
+.work-container{
+   
 }
