--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -17,6 +17,7 @@
     <div class="navbar-container">
         <span class="logo">Ayush</span>
         <nav>
+          
             <ul class="navbar-container-lists">
 
                     <li class="l1">Home <span class="fa fa-home"></span></li>
@@ -42,8 +43,14 @@
                     <h1>I'm <span id="name">Ayush Verma.</span></h1>
 
                     <div  class="aboutme"><h3></h3></div>
-                
+                   
+                    <div class="arrow-down">
+                        <div class="arrow bounce">
+                            <div><a  class="ar fa fa-long-arrow-up fa-3x"></a></div>              
+                        </div>
+                    </div>
                 </div>
+               
         </div>
 
         <div class="front-page-right">
@@ -60,47 +67,37 @@
         </div>
   
     </div>
-<div class="arrow-down">
-    <div class="arrow bounce">
-        <div><a  class="ar fa fa-long-arrow-up fa-3x"></a></div>              
-    </div>
-</div>
 
 
-<div class="about-me" style="margin-top:20px;">
+
+
+
+<div class="about-me">
     
     <div class="aboutme-content">
 
-        <h1> Portfolio</h1>
-        <hr>
-        <br>
-        <h3>About me</h3>
+        <h1> About me</h1>
+      
         <p>I'm an enthustic Web developer who likes to refines his limitations in all dimensions of life. 
-            I'm currently in second year pursuing Computer Science Engineering from Abdul Kalam Technical University. I wrote my first code in class 8th and I knew what
+            I'm currently in second year pursuing Computer Science Engineering from Abdul Kalam Technical University.<br><br>I wrote my first code in class 8th and I knew what
             I was gonna do for life. I get my kicks in the process of developing Websites which could leave a positive 
-            impact on the users as well as the whole community. Other than Programming, I'm a national badminton player who likes to keep himself fit.
+            impact on the users as well as the whole community. Other than Programming, I'm a national badminton player who likes to keep himself fit.<br><br>
          </p>
          <p>I have done my high schooling from Le Bocage International School , Maurutius where I earned Distinction. Later, I completed my 11th and 12th from India
              where I scored 95% (in PCM).
          </p>
 
-            <br>
-
-         
     </div>
     
     <div class="about-pictures">
         
-        <img src="../Images/coding.webp" alt='badminton'> 
+        <img src="../Images/vector-ayush.jpeg" alt='badminton'> 
        
     </div>
         
 
     </div>
-    <br>
-    <br>
-    <br>
-    <hr>
+   
     <div class="tech-skills-container">
     <h3 class="tech-skills">Technical skills</h3>
 
@@ -432,6 +429,11 @@
 
     </div>
 
-    
+    <div class="footer">
+        <div class="footer-text">&#xa9;Ayush Verma</div>
+    </div>
+
+
+
 </body>
 </html>
