--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -1,35 +1,52 @@
 .about-me{
     display:flex;
     flex-wrap:wrap;
+    /* background:linear-gradient(#a1c4fd, #c2e9fb); */
 }
 
 .aboutme-content{
+
     margin-top:30px;
-    margin-left:15px;
+    margin-left:20px;
     max-width:860px;
 
 }
-.about-me p{
-    font-size:20px;
+.aboutme-content h1{
+    text-align:center;
+    font-size:40px;
+    margin-bottom:15px;
+}
+
+.aboutme-content p {
+    
+}
+
+
+.aboutme-content{
+    margin-bottom:80px;
+    margin-top:30px;
 }
 
 .about-pictures{
     flex-grow:1;
     display:flex;
+    justify-content:center;
+    align-items:center;
  
     
 }
 
 .about-pictures >img{
-    margin-top:80px;
-    margin-left:30px;
-    object-fit: cover;
-    width:550px;
-    height:400px;
-    border-radius:20px;
-    box-shadow: -2px -2px 6px rgba(0, 0, 0, 0.616),
-    3px 3px 6px rgba(0, 0, 0, 0.541);
     
+    object-fit: cover;
+    width:300px;
+    height:300px;
+    border-radius:50%;
+    border: solid 3px orange;
+    margin-bottom:50px;
+    /* box-shadow: -2px -2px 6px rgba(0, 0, 0, 0.616),
+    3px 3px 6px rgba(0, 0, 0, 0.541);
+     */
 }
 .tech-skills-container{
     background:linear-gradient(#9796f0,#fbc7d4);
