--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -21,9 +21,9 @@
             <ul class="navbar-container-lists">
 
                     <li class="l1">Home <span class="fa fa-home"></span></li>
-                    <li class="l1">About me <span class="fa fa-user"></span></li>
+                    <li class="l1">About <span class="fa fa-user"></span></li>
                     <li class="l1">Work Experience <span class="fa fa-briefcase"></span></li>
-                    <li class="l1">My Projects <span class="fa fa-superpowers"></span> </li>
+                    <li class="l1">Projects <span class="fa fa-superpowers"></span> </li>
                     <li class="l1 contact-btn">Contact</li>
 
             </ul>
