--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -9,6 +9,7 @@
     margin-top:30px;
     margin-left:20px;
     max-width:860px;
+    margin-bottom:20px;
 
 }
 .aboutme-content h1{
@@ -17,15 +18,6 @@
     margin-bottom:15px;
 }
 
-.aboutme-content p {
-    
-}
-
-
-.aboutme-content{
-    margin-bottom:80px;
-    margin-top:30px;
-}
 
 .about-pictures{
     flex-grow:1;
@@ -141,4 +133,53 @@
 
 .work-container{
    
+}
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .aboutme-content h1{
+
+        font-size:20px;
+    }
+    .aboutme-content p{
+        font-size:14px;
+    
+    }
+
+.about-pictures >img{
+    
+    object-fit: cover;
+    width:100px;
+    height:100px;
+    border-radius:50%;
+    border: solid 3px orange;
+    margin-bottom:30px;
+   
+     
+}
+   
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+    
+    
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+    
+    
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
 }
