--- a/styles/style.css
+++ b/styles/style.css
@@ -11,16 +11,18 @@ body{
 }
 
 .navbar-container{
+    position:fixed;
+    z-index:2;
     background:rgba(0, 0, 0, 0.842);
     width:100%;
-    height:65px;
+    height:55px;
     display:flex;
     justify-content: space-between;
     align-items: center;
-    flex-shrink: 1;
     
-
 }
+
+
 
 .navbar-container-lists{
     list-style-type: none;
@@ -98,7 +100,7 @@ nav ul li{
 .text :nth-child(1){
     
     font-size:40px;
-    margin-top:30px;
+    margin-top:60px;
     align-self: center;
     font-weight:bolder;
     opacity:0.7;
@@ -134,7 +136,7 @@ nav ul li{
 }
 
 .front-page-right{
-    z-index:100;
+    z-index:1;
 }
 
 .ayush{
@@ -219,17 +221,38 @@ nav ul li{
     .navbar-container-lists >li> .fa{
         display:none;
     }
+    .navbar-container li{font-size:10px;}
+
+   
+    .text :nth-child(n),#name{
+        font-size:25px;
+    }
+
+    .aboutme{
+        height:150px;
+        margin-top:50px;
+    }
+
+    .frontpage{
+        height:550px;
+    }
+    .aboutme > h3::before{
+        font-size:30px;
+        align-items:center;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
+@media only screen and (min-width: 600px) {
+    
+}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
     .navbar-container-lists >li> .fa{
         display:none;
     }
-    .navbar-container li{font-size:10px;}
+    
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
