--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -202,7 +202,7 @@
         <div class="css-html">
             
             <div class="css-heading">
-                Campus Ambassador at Coding Ninja
+                Campus Ninja
             </div>
 
             <div class="css-image">
@@ -265,7 +265,7 @@
         <div class="css-html">
             
             <div class="css-heading">
-               5 star in python and problem solving
+               Python and Problem Solving
             </div>
 
             <div class="css-image">
