added contact section

--- a/styles/annimations.css
+++ b/styles/annimations.css
@@ -2,11 +2,10 @@
     color:white;
     content: "I'm a Web Developer!";
     display: inline-block;
-    font-size:36px;
-    /* animation-name: head;
+    font-size:30px;
+    animation-name: head;
     animation-duration:16s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite; */
+    animation-iteration-count: infinite;
    
     z-index:0;
 
@@ -17,21 +16,21 @@
         0%  { transform: translateX(0px); }
         5%  { transform: translateX(10px); }
         14%  { transform: translateX(30px); }
-        15%  { transform: translateX(900px); }
+        15%  { transform: translateX(690px); }
         22%  {  transform: translateX(0px); }
         33%  { content:"I'm a Python Developer"; transform: translateX(10px); }
         39%  { transform: translateX(30px); }
-        43% { transform:translateX(900px);}
+        43% { transform:translateX(690px);}
         50%  {  transform: translateX(0px); }
         56%  { content:"I'm a Competitive Programmar"; transform: translateX(10px);    }
         60%  { transform: translateX(13px); }
         64%  { transform: translateX(30px); }
-        70%  { transform: translateX(900px); }
+        70%  { transform: translateX(690px); }
         73%  {  transform: translateX(0px); }
         80%  { content:"I'm a National Badminton Player";  transform: translateX(10px); }
         85%  { transform: translateX(20px); }
         89%  { transform: translateX(30px); }
-        91%  {transform:translateX(900px); }
+        91%  {transform:translateX(690px); }
         99%  {  transform: translateX(0px); }
         100% { transform:translateX(0px); }
 
@@ -43,12 +42,12 @@
 #name::after{
  content: "";
  display:inline-block;
- height: 5px;
+ height: 3px;
  width:100%;
  position: absolute;
  top: 50px;
  left:0px;
- background:rgba(0, 0, 0, 0.521);
+ background:rgba(255, 255, 255, 0.295);
  
  animation-name:name;
  animation-duration:7s;
@@ -100,7 +99,7 @@
     }
   }
 
-.social-media :nth-child(n):hover{
+.social-media :nth-child(n):hover ,.social-media-footer :nth-child(n):hover{
     transform: rotate(-30deg);
     transition: transform  0.3s;
 }
