--- a/styles/projects.css
+++ b/styles/projects.css
@@ -153,11 +153,12 @@
 
 
 .footer{
+    color:white;
     display:flex;
     height:50px;
     justify-content: center;
     align-items:center;
-    background: rgba(128, 128, 128, 0.568);
+    background:url(../Images/galaxy.jpeg);
 }
 
 @media only screen and (max-width: 600px) {
@@ -181,15 +182,59 @@
         margin-top:30px;
         width:70px;
         height: 70px;
-    }
+            }
 
- .bottom-section >.heading{
-     font-weight:bolder;
-     margin-top:10px;
-     font-size:15px;
- }
+        .bottom-section >.heading{
+            font-weight:bolder;
+            margin-top:10px;
+            font-size:15px;
+        }
 
-  .sub-heading{
-      font-size:10px;
-  }
+        .sub-heading{
+            font-size:10px;
+        }
+
+
+        .flip-card-back >img{
+            width:70px;
+            height:70px;
+        }
+
+        .project-link, .git-link{
+            font-size:14px;
+        }
+
+        @keyframes head {
+        0%{
+            width:0ch;
+
+        }
+
+        50%{
+            width:20ch;
+        }
+
+        85%{ width:0ch;}
+
+        100%{
+            width:0ch;
+        }
+
+    
+        
+        }
+        .aboutme ::before{
+            color:white;
+            content: "I'm a Web Developer.";
+            display: inline-block;
+            animation:head 7s steps(20);
+            overflow:hidden;
+            white-space:nowrap;
+            border-right: 4px solid black;
+            width: 20ch;
+            font-size:25px;
+            animation-iteration-count: infinite;
+        
+        }
+        
 }
