--- a/styles/style.css
+++ b/styles/style.css
@@ -64,9 +64,9 @@ nav ul li{
     
     color:white;
     font-weight:bold;
-    border:solid 2px rgb(219, 53, 53);
+
     display: inline-block;
-    border-radius:30px;
+    
     
 }
 
@@ -170,9 +170,10 @@ nav ul li{
 }
 
 .social-media :nth-child(n){
+    text-decoration:none;
     font-size:40px;
-    padding-left:20px;
-    width: 100px;
+    justify-items: center;
+    text-align:center;
     height: 100px;
     color:white;
     transform: scale(1);
@@ -180,6 +181,35 @@ nav ul li{
     
 }
 
+.contactlist{
+    background:url(../Images/galaxy.jpeg);
+    
+}
+.connect-heading{
+    text-align:center;
+    
+    padding-top:10px;
+    color:white;
+    font-weight:bolder;
+    background:url(../Images/galaxy.jpeg);
+
+}
+
+
+.social-media-footer{
+    display:flex;
+    flex-direction: row;
+    justify-content:space-around;
+}
+.social-media-footer:nth-child(n){
+    text-decoration:none;
+    font-size:40px;
+    height: 70px;
+    color:white;
+    transform: scale(1);
+    transition: transform ease-in-out 0.3s;
+    z-index:1;
+}
 
 .arrow-down{
     
