--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -42,7 +42,7 @@
                     <div>Hey there!</div>
                     <h1>I'm <span id="name">Ayush Verma.</span></h1>
 
-                    <div  class="aboutme"><h3></h3></div>
+                    <div  class="aboutme"><h4></h4></div>
                    
                     <div class="arrow-down">
                         <div class="arrow bounce">
@@ -58,11 +58,11 @@
         </div>
 
         <div class="social-media">
-           <span class="fa fa-instagram"></span> 
-            <span class="fa fa-linkedin-square"></span> 
-           <span class="fa fa-quora"></span> 
-           <i class="fab fa-cuttlefish"></i>
-           <i class="fab fa-hackerrank"></i> 
+           <a href="https://www.instagram.com/ayuush_verma/" target="_blank"><span class="fa fa-instagram"></span></a> 
+            <a href="https://www.linkedin.com/in/ayushimpulse/" target="_blank"><span class="fa fa-linkedin-square"></span></a> 
+            <a href="https://www.quora.com/profile/Ayush-Verma-160" target="_blank"><span class="fa fa-quora"></span> </a>
+            <a href="https://www.codechef.com/users/ayush_8750" target="_blank"><i class="fab fa-cuttlefish"></i></a>
+            <a href="https://www.hackerrank.com/ayush_verma8750" target="_blank"><i class="fab fa-hackerrank"></i></a>
           
         </div>
   
@@ -427,6 +427,18 @@
 
         </div>
 
+    </div>
+    <div class="connect-heading">CONNECT WITH ME</div>
+    <div class="contactlist">
+       
+        <div class="social-media-footer">
+           <a href="https://www.instagram.com/ayuush_verma/" target="_blank"><span class="fa fa-instagram" style="color:white;"></span></a> 
+            <a href="https://www.linkedin.com/in/ayushimpulse/" target="_blank"><span class="fa fa-linkedin-square" style="color:white;"></span></a> 
+            <a href="https://www.quora.com/profile/Ayush-Verma-160" target="_blank"><span class="fa fa-quora" style="color:white;"></span> </a>
+            <a href="https://www.codechef.com/users/ayush_8750" target="_blank"><i class="fab fa-cuttlefish" style="color:white;"></i></a>
+            <a href="https://www.hackerrank.com/ayush_verma8750" target="_blank"><i class="fab fa-hackerrank" style="color:white;"></i></a>
+          
+        </div>
     </div>
 
     <div class="footer">
