--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -20,18 +20,18 @@
           
             <ul class="navbar-container-lists">
 
-                    <li class="l1">Home <span class="fa fa-home"></span></li>
-                    <li class="l1">About <span class="fa fa-user"></span></li>
-                    <li class="l1">Work Experience <span class="fa fa-briefcase"></span></li>
-                    <li class="l1">Projects <span class="fa fa-superpowers"></span> </li>
-                    <li class="l1 contact-btn">Contact</li>
+                <a href="#home"></a><li class="l1">Home </li></a>
+                <a href="#about"><li class="l1">About</li></a>
+                <a href="#work"><li class="l1">Work Experience </li></a>
+                <a href="#project"><li class="l1"> Projects  </li></a>
+                <a href="#connect"><li class="l1 contact-btn"> Contact</li></a>
 
             </ul>
           </nav>
        
     </div>
 
-    <div class="frontpage">
+    <div class="frontpage" id="home">
 
         <div class="front-page-left">
 
@@ -46,7 +46,7 @@
                    
                     <div class="arrow-down">
                         <div class="arrow bounce">
-                            <div><a  class="ar fa fa-long-arrow-up fa-3x"></a></div>              
+                            <div><a href="#about" class="ar fa fa-long-arrow-up fa-3x"></a></div>              
                         </div>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
 
 
 
-<div class="about-me">
+<div class="about-me" id="about">
     
     <div class="aboutme-content">
 
@@ -98,7 +98,7 @@
 
     </div>
    
-    <div class="tech-skills-container">
+    <div class="tech-skills-container" >
     <h3 class="tech-skills">Technical skills</h3>
 
     <div class="skill-container">
@@ -194,7 +194,7 @@
     </div>
     <!-- work experience and achivement-->
 
-    <div class="work-container">
+    <div class="work-container " id="work">
     <h3 class="work-skills">Work Experience and Achievements</h3>
 
     <div class="skill-container">
@@ -292,7 +292,7 @@
     <!-- project section starts here -->
 
 
-    <div class="project-section">
+    <div class="project-section" id="project">
 
     <div id="heading_card">MY PROJECTS</div>
       <div class="projects" id="projects">
@@ -428,7 +428,7 @@
         </div>
 
     </div>
-    <div class="connect-heading">CONNECT WITH ME</div>
+    <div class="connect-heading" id="connect">CONNECT WITH ME</div>
     <div class="contactlist">
        
         <div class="social-media-footer">
