--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -20,7 +20,7 @@
           
             <ul class="navbar-container-lists">
 
-                <a href="#home"></a><li class="l1">Home </li></a>
+                <a href="#home"><li class="l1">Home </li></a>
                 <a href="#about"><li class="l1">About</li></a>
                 <a href="#work"><li class="l1">Work Experience </li></a>
                 <a href="#project"><li class="l1"> Projects  </li></a>
