--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -78,12 +78,12 @@
 
         <h1> About me</h1>
       
-        <p>I'm an enthustic Web developer who likes to refines his limitations in all dimensions of life. 
+        <p>I'm an enthusiastic Web developer who likes to redefines his limitations in all dimensions of life. 
             I'm currently in second year pursuing Computer Science Engineering from Abdul Kalam Technical University.<br><br>I wrote my first code in class 8th and I knew what
             I was gonna do for life. I get my kicks in the process of developing Websites which could leave a positive 
-            impact on the users as well as the whole community. Other than Programming, I'm a national badminton player who likes to keep himself fit.<br><br>
+            impact on the users as well as the whole community. Other than this, I'm a national badminton player who likes to keep himself fit.<br><br>
          </p>
-         <p>I have done my high schooling from Le Bocage International School , Maurutius where I earned Distinction. Later, I completed my 11th and 12th from India
+         <p>I have done my high schooling from Le Bocage International School , Mauritius where I earned Distinction. Later, I completed my 11th and 12th from India
              where I scored 95% (in PCM).
          </p>
 
@@ -127,7 +127,7 @@
         <div class="css-html">
             
             <div class="css-heading">
-                HTML, CSS and Javascript
+                Python 
             </div>
 
             <div class="css-image">
@@ -148,7 +148,7 @@
         <div class="css-html">
             
             <div class="css-heading">
-                HTML, CSS and Javascript
+                Bootstrap5 -frontend-framework
             </div>
 
             <div class="css-image">
@@ -169,7 +169,7 @@
         <div class="css-html">
             
             <div class="css-heading">
-                HTML, CSS and Javascript
+                Flask -Microframework
             </div>
 
             <div class="css-image">
