--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -416,7 +416,8 @@
                                        <hr>
                                        <p class="git-link"><a href="https://github.com/hrik2001/MeTube" target="_blank">Click here for source code</a></p>
                                        
-   
+                                       <p class="project-link"><a href="https://impulse.pythonanywhere.com/"
+                                        target="_blank">Click here for live project</a></p>
                                    </div>
             </div>
            </div>
