--- a/styles/projects.css
+++ b/styles/projects.css
@@ -204,7 +204,7 @@
             font-size:14px;
         }
 
-        @keyframes head {
+        @keyframes heady {
         0%{
             width:0ch;
 
@@ -227,7 +227,7 @@
             color:white;
             content: "I'm a Web Developer.";
             display: inline-block;
-            animation:head 7s steps(20);
+            animation:heady 7s steps(20);
             overflow:hidden;
             white-space:nowrap;
             border-right: 4px solid black;
